--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -8,11 +8,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-.row {
-  margin-right: 25px;
-  margin-left: 35px;
-}
-
 /*clear floats after the columns*/
 .row::after {
   content: "";
@@ -62,59 +57,111 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 header {
+  border-bottom: 1px solid black;
+  background-color: red;
+}
+
+header a {
+	text-decoration: none;
+	margin-right: 30px;
+	margin-left: 30px;
 	color: white;
-	background-color: red;
-	border-bottom: 1px solid black;
-	font-family: "Roboto", sans-serif;
-	
 }
 
 .headerLinks {
-	float: right;
-}
-
-.headerLinks nav li {
-	display: inline-block;
+	margin-top: 5px;
+	text-align: right;
 	list-style: none;
-	margin-top: 30px;
 }
 
-.headerLinks nav li a {
+.headerLinks li a{
+  border: 1px solid white;
+  padding: 10px;
+  color: white;
+  background-color: red
+}
+
+.logo a:hover {
+  border: 1px solid white;
+  padding: 10px;
+}
+
+.headerLinks li a:hover {
+  border: 1px solid red;
+  background: white;
+  color: red;
+  padding: 10px;
+}
+
+#mainwrapper {
+	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(../images/background_home.jpg) no-repeat;
+	background-size: cover;
+}
+
+.loginbox {
+  max-width: 500px;
+  background-color: white;
+  margin: 70px auto 70px auto;
+  text-align: center;
+  height: 450px;
+}
+
+.logindiv {
+	height: 80px;
+	background-color: lightgrey;
+	padding-top: 30px;
+}
+
+.loginform {
+	margin:40px 60px;
+}
+
+.inputdiv{
+text-align: left;
+}
+
+.inputdiv input{
+	width: 100%;
+	height: 40px;
+	padding: 20px;
+	border: 1px solid blue;
+}
+
+.inputdiv input[type=submit]{
+	width: 100%;
+	height: 40px;
+	background-color: blue;
+  padding: 0px;
+  color: white;
+}
+
+.passlnk a {
 	text-decoration: none;
-	padding: 5px 20px;
-	font-family: "Roboto", sans-serif;	
-	font-size: 15px;
+	color: blue;
 }
 
-.logo a{
-  text-decoration: none;
-  padding: 5px 30px;
-  font-family: "Rock Salt", sans-serif;
-}
-
-header .headerLinks .signup a {
-	background-color: white;
+.passlnk a:hover {
 	color: red;
 }
 
-header .headerLinks .signup a:hover {
-	background-color: red;
-	color: white;
-}
-
-header a:hover {
-	border: 1px solid white;
-}
-
-a:visited {
-	color: inherit;
-}
-
 footer {
-	margin-top: 10px;
-	border-top: 1px solid green;
-	bottom: 0;
 	text-align: center;
+	padding: 10px;
+	font-weight: bold;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	.logo, .linkdiv {
+		float: left;
+	}
 
+	header a {
+		margin: 0px;
+		padding: 0px;
+	}
+
+	.headerLinks {
+		margin-top: 0px;
+	}
+} 
