--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -106,6 +106,14 @@ header a {
   height: 450px;
 }
 
+.signinbox {
+  max-width: 500px;
+  background-color: white;
+  margin: 70px auto 70px auto;
+  text-align: center;
+  height: 550px;
+}
+
 .logindiv {
 	height: 80px;
 	background-color: lightgrey;
