Add nav for all entries and entry categories

--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -34,7 +34,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     .col-s-5 {width: 41.66%;}
     .col-s-6 {width: 50%;}
     .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
+    .col-s-8 {width: 66.66%;} /*66.66*/
     .col-s-9 {width: 75%;}
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
@@ -49,7 +49,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     .col-5 {width: 41.66%;}
     .col-6 {width: 50%;}
     .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
+    .col-8 {width: 66.66%;} /*66.66*/
     .col-9 {width: 75%;}
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
@@ -168,6 +168,39 @@ footer {
 	text-align: center;
 	padding: 10px;
 	font-weight: bold;
+	background-color: green;
+}
+
+#entriesList {
+  border: 1px solid black;
+  margin-bottom: 10px;
+  height: 350px;
+  overflow-y: scroll;
+}
+
+#mainWrapper aside h3{
+  padding: 10px;
+  text-align: center;
+}
+
+.sidenav li{
+  list-style: none;
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+
+
+
+.sidenav a{
+  text-decoration: none;
+}
+
+.sidenav li:hover {
+  background-color: red;
+}
+
+.mainentries {
+	border: 1px solid red;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -185,3 +218,9 @@ footer {
 		margin-top: 0px;
 	}
 } 
+
+/*.sidenav ul li:last-child {
+  border-bottom: 0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}*/
