Style side nav for mobile view

--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -217,6 +217,10 @@ footer {
 	.headerLinks {
 		margin-top: 0px;
 	}
+
+	#entriesList {
+	  height: 100px;
+	}
 } 
 
 /*.sidenav ul li:last-child {
