--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -106,8 +106,8 @@ header h2 {
 }
 
 .loginbox {
-  max-width: 500px;
-  background-color: white;
+  max-width: 450px;
+  background-color: #FFFFF0;
   margin: 70px auto 70px auto;
   text-align: center;
   height: 450px;
@@ -115,7 +115,7 @@ header h2 {
 
 .signinbox {
   max-width: 500px;
-  background-color: white;
+  background-color: #FFFFF0;
   margin: 70px auto 70px auto;
   text-align: center;
   height: 550px;
@@ -140,6 +140,7 @@ header h2 {
 	width: 100%;
 	height: 40px;
 	padding: 20px;
+	background-color: #FFFFF0;
 	border: 1px solid blue;
 	border-radius: 5px;
 	margin-bottom: 5px;
@@ -168,7 +169,8 @@ footer {
 	text-align: center;
 	padding: 10px;
 	font-weight: bold;
-	background-color: green;
+	background-color: black;
+	color: white;
 }
 
 #entriesList {
@@ -188,8 +190,6 @@ footer {
   padding: 10px;
   border-bottom: 1px solid black;
 }
-
-
 
 .sidenav a{
   text-decoration: none;
