--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -305,3 +305,38 @@ figure {
 	color: white;
 }
 
+#new_form {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.form-input {
+  display: block;
+  width: 70%;
+  height: 50px;
+  padding: 6px 12px;
+  margin: 10px;
+  font-size: 20px;
+  line-height: 1.428571429;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: none;
+  border-left: 1px solid #9AC0CD;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+#new_form textarea {
+	height: 457px;
+}
+
+#new_form input[type=submit] {
+	background: #9AC0CD;
+	border: 1px solid #9AC0CD;
+}
+
+
