--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -58,7 +58,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 
 header {
   border-bottom: 1px solid black;
-  background-color: red;
+  background-color: blue;
 }
 
 header a {
@@ -85,7 +85,7 @@ header h2 {
   border: 1px solid white;
   padding: 10px;
   color: white;
-  background-color: red
+  background-color: blue
 }
 
 .logo a:hover {
@@ -169,8 +169,9 @@ footer {
 	text-align: center;
 	padding: 10px;
 	font-weight: bold;
-	background-color: black;
-	color: white;
+	background-color: white;
+  border-top: 1px solid blue;
+	color: blue;
 }
 
 #entriesList {
@@ -269,10 +270,12 @@ figure {
 
 /* The Close Button */
 .close {
-  color: red;
+  color: white;
+  background-color: red;
   float: right;
   font-size: 28px;
   font-weight: bold;
+  border: 1px solid red;
 }
 
 .close:hover,
@@ -330,8 +333,38 @@ figure {
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-#new_form textarea {
+.profile-input {
+  display: inline-block;
+  width: 50%;
+  height: 30px;
+  padding: 6px 12px;
+  margin: 10px;
+  font-size: 20px;
+  line-height: 1.428571429;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: none;
+  border-left: 1px solid #9AC0CD;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+legend {
+  border: 1px solid blue;
+  padding: 3px;
+}
+
+#new_form textarea, {
 	height: 457px;
+}
+
+.profile_form textarea {
+  height: 300px;
+  display: block;
 }
 
 #new_form input[type=submit] {
@@ -339,4 +372,27 @@ figure {
 	border: 1px solid #9AC0CD;
 }
 
+.profile_form input[type=submit] {
+  background: #9AC0CD;
+  border: 1px solid #9AC0CD;
+}
+
+#profilewrapper {
+  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(../images/profile_bg.jpg) no-repeat;
+  background-size: cover;
+}
+
+.profile {
+  max-width: 1000px;
+  margin: 0 auto;
+  border: 1px solid blue;
+  padding: 10px;
+  background-color: white;
+}
+
+fieldset {
+  margin-bottom: 30px;
+  padding: 10px;
+  border: 1px solid blue;
+}
 
