--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -12,6 +12,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-family: Handlee;
 }
 */
+
 /*clear floats after the columns*/
 .row::after {
   content: "";
@@ -58,6 +59,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+
+    .index #mainwrapper {
+      height: 100vh;
+    }
 }
 
 header {
@@ -105,7 +110,7 @@ header h2 {
 }
 
 #mainwrapper {
-	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(../images/background_home.jpg) no-repeat;
+	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ,url(../images/landing_bg.jpg) no-repeat;
 	background-size: cover;
 }
 
@@ -117,6 +122,50 @@ header h2 {
   height: 450px;
 }
 
+.intro {
+  max-width: 900px;
+  margin: 0 auto 0 auto;
+  text-align: center;
+  padding: 100px 10px 60px 10px;
+  height: auto;
+}
+
+.intro h1 {
+  color: white;
+  font-size: 72px;
+}
+
+.intro p{
+  color: white;
+  margin-bottom: 30px;
+}
+
+.intro button {
+  color: white;
+  text-decoration: none;
+  border: 1px solid blue;
+  background-color: blue;
+  padding: 15px;
+}
+
+.intro button:hover {
+  border-color: white;
+  color: blue;
+  background-color: white;
+  text-decoration: underline;
+}
+
+.cards {
+  max-width: 200px;
+  background-color: lightgrey;
+  height: 100px;
+  border: 1px solid white;
+  margin: 20px;
+}
+
+.cards h1 {
+  font-size: 1.3em;
+}
 .signinbox {
   max-width: 500px;
   background-color: #FFFFF0;
