--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -30,7 +30,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     width: 100%;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
     /* For tablets: */
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
@@ -64,7 +64,25 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       height: 100vh;
     }
 }
+@media only screen and (min-width: 1024px) {
+    /* For desktop: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;} /*66.66*/
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
 
+    .index #mainwrapper {
+      height: 100vh;
+    }
+}
 header {
   border-bottom: 1px solid black;
   background-color: blue;
@@ -234,7 +252,7 @@ footer {
   overflow-y: scroll;
 }
 
-#mainWrapper aside h3{
+/*#mainWrapper aside h3{
   padding: 10px;
   text-align: center;
 }
@@ -259,7 +277,7 @@ footer {
 .sidenav li:hover {
   background-color: skyblue;
 }
-
+*/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 	.logo, .linkdiv {
@@ -296,10 +314,16 @@ figure {
 	border: 1px solid blue;
 	padding: 10px;
 	text-align: center;
+  -moz-box-shadow: 5px 5px 5px #777777;
+  -webkit-box-shadow: 5px 5px 5px #777777;
+  box-shadow: 5px 5px 5px #777777;
 }
 
 figure:hover {
-  background-color: lightgrey;
+  background-color: lightgrey;  
+  -moz-box-shadow: 8px 8px 8px #777777;
+  -webkit-box-shadow: 8px 8px 8px #777777;
+  box-shadow: 8px 8px 8px #777777;
 }
 
 figcaption h2 {
@@ -480,4 +504,30 @@ fieldset {
 #wrapper {
   max-width: 90%;
   margin: 0 auto;
+}
+
+
+.btn {
+  margin: 5px;
+  padding: 10px;
+  color: white;
+}
+
+.btn:hover {
+  background-color: white;
+  color: blue;
+  border: 1px solid blue;
+}
+
+.btn-footer {
+  padding: 5px;
+  margin-top: 20px;
+}
+
+.btn-edit {
+  background-color: blue;
+}
+
+.btn-delete {
+  background-color: red;
 }
