--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -414,7 +414,7 @@ article a {
 	color: white;
 }
 
-#new_form {
+#new_form, #edit_form {
 	margin-left: 20px;
 	margin-right: 20px;
 }
@@ -431,7 +431,7 @@ article a {
   background-color: #fff;
   background-image: none;
   border: none;
-  border-left: 1px solid #9AC0CD;
+  border: 1px solid #9AC0CD;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -464,13 +464,24 @@ legend {
   padding: 3px;
 }
 
+.headin{
+  text-align: center;
+}
+
 #new_form textarea {
 	height: 457px;
 }
 
+
 #edit_form textarea {
   height: 457px;
 }
+
+#new_form label, #edit_form label {
+  text-align: center;
+  font-size: 2em;
+}
+
 
 .profile_form textarea {
   height: 300px;
@@ -480,11 +491,13 @@ legend {
 #new_form input[type=submit] {
 	background: #9AC0CD;
 	border: 1px solid #9AC0CD;
+  max-width: 50%;
 }
 
 #edit_form input[type=submit] {
   background: #9AC0CD;
   border: 1px solid #9AC0CD;
+  max-width: 50%;
 }
 
 .profile_form input[type=submit] {
