--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -440,9 +440,9 @@ article a {
 }
 
 .profile-input {
-  display: inline-block;
-  width: 50%;
-  height: 30px;
+  display: block;
+  width: 70%;
+  height: 50px;
   padding: 6px 12px;
   margin: 10px;
   font-size: 20px;
@@ -451,12 +451,16 @@ article a {
   background-color: #fff;
   background-image: none;
   border: none;
-  border-left: 1px solid #9AC0CD;
+  border: 1px solid #9AC0CD;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.no-border {
+  border: transparent;
 }
 
 legend {
@@ -466,27 +470,18 @@ legend {
 
 .headin{
   text-align: center;
+  font-size: 3em;
 }
 
-#new_form textarea {
+#new_form textarea, #edit_form textarea, .profile_form textarea {
 	height: 457px;
 }
 
-
-#edit_form textarea {
-  height: 457px;
-}
-
-#new_form label, #edit_form label {
+#new_form label, #edit_form label, .profile_form label {
   text-align: center;
   font-size: 2em;
 }
 
-
-.profile_form textarea {
-  height: 300px;
-  display: block;
-}
 
 #new_form input[type=submit] {
 	background: #9AC0CD;
@@ -503,6 +498,7 @@ legend {
 .profile_form input[type=submit] {
   background: #9AC0CD;
   border: 1px solid #9AC0CD;
+  max-width: 50%;
 }
 
 #profilewrapper {
