--- a/client/css/style.css
+++ b/client/css/style.css
@@ -240,6 +240,12 @@ footer {
 	background-color: #072e73;
   border-top: 1px solid #072e73;
 	color: white;
+  width: 100%;
+  position: absolute;
+}
+
+#entry-footer {
+  bottom: 0;
 }
 
 #entriesList {
@@ -548,4 +554,9 @@ input[type=submit] {
   visibility: visible;
   -webkit-animation: fadein 0.5s;
   animation: fadein 0.5s;
+}
+
+#no_entry {
+  font-size: 5em;
+  color: darkgrey;
 }
